# ComfyUI-GenAsset

./: .gitignore  ABOUT.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  health.py  node_list.json  nodes.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: publish_action.yml
js/: genasset_importer.js
scripts/: smoke_catalog_import.py  smoke_import.py  test_health.py  test_onboarding_workflows.py
workflows/: GenAsset-Asset-Summary.json  GenAsset-Create-Asset.json  GenAsset-Delete-Version.json  GenAsset-Find-Assets.json  GenAsset-Fork-Asset-From-Version.json  GenAsset-Import-Demo.json  GenAsset-List-Asset-Versions.json  GenAsset-Load-Current-Version.json  GenAsset-Promote-Version.json  GenAsset-Rename-Asset.json  GenAsset-Simple-Text-To-Image-AI-Save.json  GenAsset-Simple-Text-To-Image-Save.json  GenAsset-Upsert-Asset-Fields.json  genasset_compare_two_versions.json  genasset_create_branch_version.json  genasset_img2img_load_edit_save_woman_cafe.json  genasset_load_recipe_autofill_and_generate.json  genasset_load_recipe_to_widgets.json  genasset_load_version.json  genasset_patch_version_metadata.json  genasset_prefilled_b3383c24_img2img.json  genasset_sdxl_save_generation.json
